[package]
name = "chipp_auth"
version = "2.1.0"
description = "macOS library for storing credentials in keychain"
repository = "https://github.com/chipp/auth"
license = "MIT"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2021"

[dependencies]
security-framework-sys = { version = "2.9", default-features = false }
core-foundation = "0.9.4"
rpassword = "7.3"
